-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.0
-
None
-
4dc56046e (13.0)
When you select to use the Qt module name in the #include directive in the Qt Class Generation code generation, and then create a class with a ui file, the file automatically generated by the code adds the old Qt module name,
for example:
#include <QtGui/QDialog>,
but,this is incorrect, the current version of Qt6, the correct code should be:
#include <QtWidgets/QDialog>
| For Gerrit Dashboard: QTCREATORBUG-30751 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 559962,2 | Designer: Do not default to Qt4 module names in include statements | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | -1 |