Designer: Do not default to Qt4 module names in include statements

Fixes: QTCREATORBUG-30751
Change-Id: Ieca6779aa40b55536f0ce07b1803ff7a1a31004c
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>